fix overflow issue

--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -10,7 +10,8 @@
 
 .navbar-language-container {
   display: flex;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: visible;
   flex-direction: row;
   justify-content: flex-start;
 }
@@ -30,8 +31,9 @@
 
 .navbar-icon {
   width: auto;
-  height: 100%;
+  height: 90%;
   opacity: 0.7;
+  bottom: 0px;
 }
 
 #diy-icon {
@@ -62,11 +64,12 @@
   display: grid;
   grid-template-areas: 'navbar-left-padding homeIcon diyIcon purchaseIcon navbar-language-separator navbar-language-container navbar-right-padding';
   grid-template-columns: 2% 5% 5% 5% 63% 15% 5%;
-  grid-template-rows: 40px;
+  grid-template-rows: 60px;
   grid-area: navbar;
-  margin-top: 1px;
-  overflow: hidden;
-  margin-bottom: 2px;
+  margin-top: 5px;
+  overflow-y: visible;
+  overflow-x: hidden;
+  margin-bottom: 10px;
   width: 100%;
 }
 
